fixed nav collapse and opacity transition

--- a/src/scss/default/_default.scss
+++ b/src/scss/default/_default.scss
@@ -2908,16 +2908,23 @@ input, select, textarea {
 	section.videos {
 		text-align: center;
 	}
-	section iframe.video.embeded {
+	section iframe.video.embeded  {
 		display: block;
 		aspect-ratio: 16/9;
 		width: 75%;
 		margin: 0 auto 5rem auto;
 	}
 
+	section video.video {
+		display: block;
+		width: 80%;
+		margin: 0 auto 5rem auto;
+		/* aspect-ratio: 1/1; */
+	}
+
 	@media screen and (max-width: 736px) {
 
-		section iframe.video.embeded {
+		section iframe.video.embeded, section video.video {
 			width: 100%;
 			max-width: 25rem;
 		}
@@ -3337,7 +3344,7 @@ input, select, textarea {
 		text-align: center;
 		z-index: 1;
 		min-height: 100vh;
-		text-shadow: 0px 1px 9px rgba(0,0,0,0.8);
+		text-shadow: 0px 1px 12px rgba(0,0,0,0.9);
 	}
 
 		#intro input, #intro select, #intro textarea {
@@ -3392,7 +3399,7 @@ input, select, textarea {
 		#intro .buttonwrapper {
 			line-height: 0;
 			border-radius: 2.4rem;
-			box-shadow: 0 0 9px #00000092;
+			box-shadow: 0 0 11px #00000070;
 		}
 
 			/* #intro input[type="submit"]:hover,
@@ -3481,19 +3488,19 @@ input, select, textarea {
 			}
 
 		body.is-preload #intro {
-			-moz-transform: translateY(2rem);
-			-webkit-transform: translateY(2rem);
-			-ms-transform: translateY(2rem);
-			transform: translateY(2rem);
-			opacity: 0;
+			-moz-transform: translateY(2rem) !important;
+			-webkit-transform: translateY(2rem) !important;
+			-ms-transform: translateY(2rem) !important;
+			transform: translateY(2rem) !important;
+			opacity: 0 !important; //i dadded all !important also here
 		}
 
 			body.is-preload #intro:not(.hidden) + #header + #nav {
-				-moz-transform: translateY(4rem);
-				-webkit-transform: translateY(4rem);
-				-ms-transform: translateY(4rem);
-				transform: translateY(4rem);
-				opacity: 0;
+				-moz-transform: translateY(4rem) !important;
+				-webkit-transform: translateY(4rem) !important;
+				-ms-transform: translateY(4rem) !important;
+				transform: translateY(4rem) !important;
+				opacity: 0 !important; // I added all !imporatnt afterwards didnt work without
 			}
 
 		@media screen and (max-width: 980px) {
