--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,5 @@
 
-$color-lightblue: #38c7ee;
+$color-lightblue: #B0D926;
 
 $color-darkgrey: #2a3037;
 
